# deepresearch-agent

./: .gitignore  README.md  __init__.py  changes.md  cli.py  langgraph.json  multi_agent_supervisor.py  pyproject.toml  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  run.py  utils.py
info/: free_maxxing.md  run.md  understand.md
